# SpamClassifier

./: CMakeLists.txt  DataLoader.cpp  DataLoader.h  README.md  SpamClassifier.cpp  SpamClassifier.h  main.cpp  test_data.csv  train_data.csv
